Replaced a Stream .collect with .toList